force-app/main/default/objects/BGBK__Return__c/BGBK__Return__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <label>Return</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>