force-app/main/default/objects/BGBK__Return__c/fields/abd_Correction_Information__c.field-meta.xml
<CustomField>
    <fullName>abd_Correction_Information__c</fullName>
    <label>Correction Information</label>
    <type>TextArea</type>
</CustomField>