force-app/main/default/objects/BGBK__Return__c/fields/abd_Corrections_from_Previous_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>abd_Corrections_from_Previous_Tax_Report__c</fullName>
    <label>Corrections from Previous Tax Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>