force-app/main/default/objects/BGBK__Return__c/fields/abd_DBA__c.field-meta.xml
<CustomField>
    <fullName>abd_DBA__c</fullName>
    <formula>abd_Licensee__r.abd_DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBA</label>
    <type>Text</type>
</CustomField>