force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_Breakage_Destroyed__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_Breakage_Destroyed__c</fullName>
    <label>Gallons Breakage/Destroyed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>