force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_on_hand_at_end_of_month__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_on_hand_at_end_of_month__c</fullName>
    <label>Gallons on hand at end of month</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>