force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_Purchased_Produced_during_mo__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_Purchased_Produced_during_mo__c</fullName>
    <label>Gallons Purchased/Produced during month</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>