force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_Received_in_Bond__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_Received_in_Bond__c</fullName>
    <label>Gallons Received in Bond</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>