force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_sold_at_Retail__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_sold_at_Retail__c</fullName>
    <label>Gallons sold at Retail</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>