force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_Spoilage__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_Spoilage__c</fullName>
    <label>Gallons Spoilage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>