force-app/main/default/objects/BGBK__Return__c/fields/abd_Gallons_used_by_Family__c.field-meta.xml
<CustomField>
    <fullName>abd_Gallons_used_by_Family__c</fullName>
    <label>Gallons used by Family</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>