force-app/main/default/objects/BGBK__Return__c/fields/abd_Grace_Day__c.field-meta.xml
<CustomField>
    <fullName>abd_Grace_Day__c</fullName>
    <formula>IF( MONTH( abd_Reporting_Period_To__c ) != 12, 
     DATE( YEAR( abd_Reporting_Period_To__c ), MONTH( abd_Reporting_Period_To__c + 1),11), 
     DATE( YEAR( abd_Reporting_Period_To__c + 1), 1 ,11))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Day</label>
    <type>Date</type>
</CustomField>