force-app/main/default/objects/BGBK__Return__c/fields/abd_License__c.field-meta.xml
<CustomField>
    <fullName>abd_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Tax Reports</relationshipLabel>
    <relationshipName>Tax_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>