force-app/main/default/objects/BGBK__Return__c/fields/abd_Licensee__c.field-meta.xml
<CustomField>
    <fullName>abd_Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Reports</relationshipLabel>
    <relationshipName>Tax_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>