force-app/main/default/objects/BGBK__Return__c/fields/abd_Manufacturing_Losses__c.field-meta.xml
<CustomField>
    <fullName>abd_Manufacturing_Losses__c</fullName>
    <label>Manufacturing Losses</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>