force-app/main/default/objects/BGBK__Return__c/fields/abd_Non_Taxed_Gallons__c.field-meta.xml
<CustomField>
    <fullName>abd_Non_Taxed_Gallons__c</fullName>
    <formula>/* Red rows from matrix */
 abd_Tax_Exempt_Sales_IA_Lic_Wholesallers__c +
 abd_Tax_Exempt_Shipments_Out_of_State__c +
 abd_Tax_Exempt_Adjustments__c +
 abd_Gallons_Samples__c +
 abd_Gallons_Breakage_Destroyed__c +
 abd_Gallons_Spillage__c +
 abd_Gallons_Spoilage__c +
 abd_Manufacturing_Losses__c +
 abd_Transferred_out_in_Bond__c +
 abd_Gallons_used_by_Family__c +
 abd_Gallons_sold_at_Retail__c +
 abd_Wholesale_sales_Retail__c +
 abd_Gallons_on_hand_at_end_of_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non-Taxed Gallons</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>