force-app/main/default/objects/BGBK__Return__c/fields/abd_Penalty_Due__c.field-meta.xml
<CustomField>
    <fullName>abd_Penalty_Due__c</fullName>
    <formula>IF( TODAY() >  abd_Grace_Day__c, abd_Total_Tax_Due_This_Tax_Report__c * abd_Penalty_Percent__c, 0.00 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Penalty Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>