force-app/main/default/objects/BGBK__Return__c/fields/abd_Penalty_Percent__c.field-meta.xml
<CustomField>
    <fullName>abd_Penalty_Percent__c</fullName>
    <label>Penalty %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>