force-app/main/default/objects/BGBK__Return__c/fields/abd_Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Premise_Address__c</fullName>
    <formula>BGBK__License2__r.abd_Premise_Address__c &amp; " " &amp; BGBK__License2__r.abd_Premise_Address_2__c &amp; " " &amp;
BGBK__License2__r.abd_Premise_City__c &amp; ", " &amp; TEXT( BGBK__License2__r.abd_Premise_State__c ) &amp; " " &amp;  BGBK__License2__r.abd_Premise_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premise Address</label>
    <type>Text</type>
</CustomField>