force-app/main/default/objects/BGBK__Return__c/fields/abd_Previous_Month_Ending_Gallonage__c.field-meta.xml
<CustomField>
    <fullName>abd_Previous_Month_Ending_Gallonage__c</fullName>
    <formula>abd_Previous_Month_Tax_Report__r.abd_Gallons_on_hand_at_end_of_month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Month Ending Gallonage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>