force-app/main/default/objects/BGBK__Return__c/fields/abd_Previous_Month_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>abd_Previous_Month_Tax_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Month Tax Report</label>
    <referenceTo>BGBK__Return__c</referenceTo>
    <relationshipLabel>Tax Reports</relationshipLabel>
    <relationshipName>Tax_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>