force-app/main/default/objects/BGBK__Return__c/fields/abd_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>abd_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tax Reports</relationshipLabel>
    <relationshipName>Tax_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>