force-app/main/default/objects/BGBK__Return__c/fields/abd_Reporting_Period_From__c.field-meta.xml
<CustomField>
    <fullName>abd_Reporting_Period_From__c</fullName>
    <label>Reporting Period - From</label>
    <type>Date</type>
</CustomField>