force-app/main/default/objects/BGBK__Return__c/fields/abd_Reporting_Period_To__c.field-meta.xml
<CustomField>
    <fullName>abd_Reporting_Period_To__c</fullName>
    <label>Reporting Period - To</label>
    <type>Date</type>
</CustomField>