force-app/main/default/objects/BGBK__Return__c/fields/abd_Returns_from_retailer__c.field-meta.xml
<CustomField>
    <fullName>abd_Returns_from_retailer__c</fullName>
    <label>Returns from retailer</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>