force-app/main/default/objects/BGBK__Return__c/fields/abd_Status__c.field-meta.xml
<CustomField>
    <fullName>abd_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Non Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>