force-app/main/default/objects/BGBK__Return__c/fields/abd_Tax_Exempt_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Exempt_Adjustments__c</fullName>
    <label>Tax Exempt Adjustments</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>