force-app/main/default/objects/BGBK__Return__c/fields/abd_Tax_Exempt_Sales_IA_Lic_Wholesallers__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Exempt_Sales_IA_Lic_Wholesallers__c</fullName>
    <label>Tax Exempt Sales to IA Lic. Wholesallers</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>