force-app/main/default/objects/BGBK__Return__c/fields/abd_Tax_Exempt_Shipments_Out_of_State__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Exempt_Shipments_Out_of_State__c</fullName>
    <label>Tax Exempt Shipments Out of State</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>