force-app/main/default/objects/BGBK__Return__c/fields/abd_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>