force-app/main/default/objects/BGBK__Return__c/fields/abd_Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>abd_Tax_Type__c</fullName>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>abd_Tax_Type</valueSetName>
    </valueSet>
</CustomField>