force-app/main/default/objects/BGBK__Return__c/fields/abd_Taxable_Gallonage__c.field-meta.xml
<CustomField>
    <fullName>abd_Taxable_Gallonage__c</fullName>
    <formula>abd_Taxable_Gallons__c - abd_Non_Taxed_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Gallonage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>