force-app/main/default/objects/BGBK__Return__c/fields/abd_Taxable_Gallons__c.field-meta.xml
<CustomField>
    <fullName>abd_Taxable_Gallons__c</fullName>
    <formula>/* Green Fields from Matrix */
 abd_Gallons_on_hand_at_beginning_of_mo__c +
 abd_Gallons_Purchased_Produced_during_mo__c +
 abd_Gallons_Received_in_Bond__c +
 abd_Returns_from_retailer__c +
 abd_Total_Gallons_Shipped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Gallons</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>