force-app/main/default/objects/BGBK__Return__c/fields/abd_Total_Gallons_Shipped__c.field-meta.xml
<CustomField>
    <fullName>abd_Total_Gallons_Shipped__c</fullName>
    <label>Total Gallons Shipped</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>