force-app/main/default/objects/BGBK__Return__c/fields/abd_Total_Remittance_Due__c.field-meta.xml
<CustomField>
    <fullName>abd_Total_Remittance_Due__c</fullName>
    <formula>abd_Total_Tax_Due_This_Tax_Report__c + abd_Penalty_Due__c + abd_Corrections_from_Previous_Tax_Report__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Remittance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>