force-app/main/default/objects/BGBK__Return__c/fields/abd_Total_Tax_Due_This_Tax_Report__c.field-meta.xml
<CustomField>
    <fullName>abd_Total_Tax_Due_This_Tax_Report__c</fullName>
    <formula>abd_Taxable_Gallonage__c *  abd_Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Tax Due This Tax Report</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>