force-app/main/default/objects/BGBK__Return__c/fields/abd_Wholesale_sales_Retail__c.field-meta.xml
<CustomField>
    <fullName>abd_Wholesale_sales_Retail__c</fullName>
    <label>Wholesale sales - Retail</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>