force-app/main/default/objects/BGBK__Return__c/fields/BGBK__License2__c.field-meta.xml
<CustomField>
    <fullName>BGBK__License2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>MUSW__License2__c</referenceTo>
    <relationshipLabel>Returns</relationshipLabel>
    <relationshipName>Returns</relationshipName>
    <type>Lookup</type>
</CustomField>