force-app/main/default/objects/BGBK__Return__c/recordTypes/Beer_Wine_Tax_Report.recordType-meta.xml
<RecordType>
    <fullName>Beer_Wine_Tax_Report</fullName>
    <active>true</active>
    <label>Beer/Wine Tax Report</label>
</RecordType>