force-app/main/default/objects/BGBK__Return__c/recordTypes/Brew_Pub_Tax_Report.recordType-meta.xml
<RecordType>
    <fullName>Brew_Pub_Tax_Report</fullName>
    <active>true</active>
    <label>Brew Pub Tax Report</label>
</RecordType>