force-app/main/default/objects/BGBK__Return__c/recordTypes/Direct_Shipper_Tax_Report.recordType-meta.xml
<RecordType>
    <fullName>Direct_Shipper_Tax_Report</fullName>
    <active>true</active>
    <label>Direct Shipper Tax Report</label>
</RecordType>