force-app/main/default/objects/BGBK__Return__c/recordTypes/Native_Wine_Tax_Report.recordType-meta.xml
<RecordType>
    <fullName>Native_Wine_Tax_Report</fullName>
    <active>true</active>
    <label>Native Wine Tax Report</label>
</RecordType>